--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: garba
+    name: IFC-Sohamshahhh
     plan: free
     autoDeploy: false
     runtime: docker
@@ -10,7 +10,7 @@ services:
         value: 80
       - key: DATABASE_URL
         fromDatabase:
-          name: garba-db
+          name: IFC-Sohamshahhh-db
           property: connectionString
       - key: APP_KEY
         sync: false
@@ -27,5 +27,5 @@ services:
       - key: FILESYSTEM_PRIVATE_DISK
         value: local
 databases:
-  - name: garba-db
+  - name: IFC-Sohamshahhh-db
     plan: free
